# WorldFoundry

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_support.yml
.github/workflows/: ci.yml  dependencies.yml  platform-builds.yml  quality.yml  release.yml
apps/worldfoundry-compose/: bridge-kotlin  settings.gradle.kts
apps/worldfoundry-compose/desktopApp/: build.gradle.kts
apps/worldfoundry-compose/iosApp/: build.gradle.kts
apps/worldfoundry-compose/shared/: build.gradle.kts
bridge-kotlin/: build.gradle.kts  settings.gradle.kts
core/: Cargo.toml  example_world.json  world_foundry.h
core/src/: c_api.rs  lib.rs
core/src/data/: mod.rs
core/src/export/: mod.rs  png.rs
core/src/generation/: mod.rs
core/src/import/: azgaar.rs  mod.rs
core/src/platform/: mod.rs
core/src/rendering/: color.rs  mod.rs  tile.rs
docs/: DOCUMENTATION_GUIDE.md  PROJECT_STATUS.md  Proposal.md  README.md  SPLASH_SCREEN.md
docs/api/: CORE_API.md
docs/architecture/: ARCHITECTURE.md  DATA_MODEL.md
docs/community/: CONTRIBUTING.md
docs/development/deployment/: DEBUG_DEPLOYMENT.md
docs/development/setup/: ANDROID_DEVELOPMENT.md  DEVELOPMENT_SETUP.md  IOS_DEVELOPMENT.md  WINDOWS_DEVELOPMENT.md
docs/technology/core/: RUST.md
docs/tutorials/: GETTING_STARTED.md
examples/: README.md  basic_usage.rs
gradle/: libs.versions.toml
scripts/: save_splash_image.py
(+15 files in other folders)
