[package]
name = "world-foundry-core"
version = "0.1.0"
edition = "2021"
authors = ["World Foundry Contributors"]
description = "Core engine for World Foundry cross-platform fantasy map generator"
license = "MIT"
repository = "https://github.com/Balexda/world-foundry"

[dependencies]
# Core dependencies for the shared engine
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
skia-safe = { version = "0.75", features = ["gl"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# For Azgaar import functionality
zip = "2.1"
image = "0.25"
geo = "0.28"
geojson = "0.24"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "world_foundry_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "world-foundry-cli"
path = "src/bin/cli.rs"